[gd_scene load_steps=2 format=3 uid="uid://bboao1ulxkk7m"]

[ext_resource type="Script" uid="uid://dj0guhdklaob6" path="res://Scripts/start_screen.gd" id="1_i8r30"]

[node name="StartScreen" type="CanvasLayer"]
script = ExtResource("1_i8r30")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -78.0
offset_top = -94.0
offset_right = 551.0
offset_bottom = 789.0
color = Color(0.701961, 0.929412, 0.301961, 1)

[node name="HoppyFrogLabel" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.142
anchor_right = 0.5
anchor_bottom = 0.142
offset_left = -79.0
offset_top = -39.4
offset_right = 79.0
offset_bottom = 5.6
grow_horizontal = 2
theme_override_font_sizes/font_size = 63
text = "HOPPY FROG"

[node name="WelcomeLabel" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.305
anchor_right = 0.5
anchor_bottom = 0.305
offset_left = -79.0
offset_top = -22.5
offset_right = 79.0
offset_bottom = 22.5
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "WELCOME"

[node name="Label" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.382
anchor_right = 0.5
anchor_bottom = 0.382
offset_left = -62.0
offset_top = -11.4
offset_right = 62.0
offset_bottom = 11.6
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 15
text = "Select a difficulty"

[node name="EasyButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.5
offset_top = -41.0
offset_right = 99.5
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 23
text = "EASY"

[node name="MediumButton" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.656
anchor_right = 0.5
anchor_bottom = 0.656
offset_left = -99.5
offset_top = -41.2
offset_right = 99.5
offset_bottom = 40.8
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 23
text = "MEDIUM"

[node name="HardButton" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.811
anchor_right = 0.5
anchor_bottom = 0.811
offset_left = -99.5
offset_top = -40.7
offset_right = 99.5
offset_bottom = 41.3
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 23
text = "HARD"

[connection signal="pressed" from="EasyButton" to="." method="_on_easy_button_pressed"]
[connection signal="pressed" from="MediumButton" to="." method="_on_medium_button_pressed"]
[connection signal="pressed" from="HardButton" to="." method="_on_hard_button_pressed"]
